update routers
