# server/config/constants.ts
@@ -11,7 +11,8 @@ export const {
 export const SPOTIFY_TOKEN_BASE_URL = 'https://accounts.spotify.com/api/token';
 export const SPOTIFY_AUTHORIZE_BASE_URL = 'https://accounts.spotify.com/authorize';
 
-export const CSRF_STATE_COOKIE_KEY = 'csrfState';
+export const CSRF_STATE_COOKIE_KEY = 'csrf_state';
+export const AUTH_STATE_COOKIE_KEY = 'auth_state';
 
 // 20分でトークンを更新させる
 export const TOKEN_EXPIRE_IN = 1000 * 60 * 20;
